--- a/javaScript/js2/week1/.vscode/launch.json
+++ b/javaScript/js2/week1/.vscode/launch.json
@@ -4,6 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "java",
+        "name": "Debug (Launch)",
+        "request": "launch",
+        "mainClass": ""
+    },
         {
             "type": "chrome",
             "request": "attach",
@@ -15,7 +21,10 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\apps.js"
+            "program": "${workspaceFolder}\\assigment.js"
+            //"program": "${workspaceFolder}\\myMap.js"
+
+           // "program": "${workspaceFolder}\\apps.js"
         }
     ]
 }
