--- a/javaScript/js2/week2/.vscode/launch.json
+++ b/javaScript/js2/week2/.vscode/launch.json
@@ -8,6 +8,19 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
+            "program": "${workspaceFolder}/Maartje.js"
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 9229
+        },
+      
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
             "program": "${workspaceFolder}\\mapFilter.js"
         }
     ]
