modify  squirtle-sprites.js

--- a/javaScript/js2/week2/.vscode/launch.json
+++ b/javaScript/js2/week2/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
+            "program": "${workspaceFolder}/squirtle-sprites.js"
+        },
+
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
             "program": "${workspaceFolder}/Maartje.js"
         },
         {
