--- a/javaScript/js2/week3/.vscode/launch.json
+++ b/javaScript/js2/week3/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\step2-7.js"
+            "program": "${workspaceFolder}\\exmpl1.js"
         }
     ]
 }
