--- a/javaScript/js3/.vscode/launch.json
+++ b/javaScript/js3/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/week1//main.js"
+            "program": "${workspaceFolder}//week2/main1.js"
         }
     ]
 }
